--- a/core/resources/views/login.html
+++ b/core/resources/views/login.html
@@ -1,6 +1,3 @@
-<!-- this is a test html file for exercising the custom login feature -->
-<!-- this test can be activated by setting the Look and Feel Settings property of Custom Login to the value 'core-testCustomLogin'. -->
-<!-- this file will be replaced this with the EXTJS version of the login like is used in the CDS project. -->
 <style type="text/css">
     .labkey-error {
         margin-top: 15px;
@@ -8,7 +5,7 @@
 </style>
 
 <div class="auth-form">
-    <div class="auth-header">Core Module Custom Sign In</div>
+    <div class="auth-header">Default Sign In With Ajax</div>
     <div class="labkey-error" id="errors"></div>
     <div class="auth-form-body">
         <div class="auth-credentials-form">
