TempTableInClauseGenerator    - works with Postgres    - supports String LabKey Query uses SqlDialect.inClause.appendInClauseSql() in some cases

--- a/core/resources/views/testCustomLogin.html
+++ b/core/resources/views/testCustomLogin.html
@@ -15,7 +15,7 @@
         <label for="email">Email</label>
         <input id="email" name="email" type="text" class="input-block" tabindex="1" >
         <label for="password">
-            Password <a href="resetPassword.view?">(forgot password)</a>
+            Password <a href="login-resetPassword.view?">(forgot password)</a>
         </label>
         <input id="password" name="password" type="password" class="input-block" tabindex="2" autofocus>
         <input type=checkbox name="remember" id="remember"  checked>
