fix size of stacked font icons in File Manager

--- a/internal/webapp/internal/font-awesome-4.4.0/css/labkey-font-awesome.css
+++ b/internal/webapp/internal/font-awesome-4.4.0/css/labkey-font-awesome.css
@@ -10,13 +10,12 @@
 .labkey-fa-plus-circle-folder{
     color: green;
     margin-left: 0.25em;
-    margin-top: 0.2em;
 }
 
 .labkey-fa-upload-files{
     color: blue;
-    margin-left: 0.15em;
-    margin-top: 0.35em;
+    margin-left: 0.05em;
+    margin-top: 0.20em;
 }
 
 .labkey-fa-upload-files-text{
@@ -24,7 +23,9 @@
     margin-top: 0.35em;
 }
 
-
+.labkey-fa-stacked-wrapper{
+    font-size: 9px;
+}
 
 
 
