--- a/query/webapp/dataview/DataViewsPanel.css
+++ b/query/webapp/dataview/DataViewsPanel.css
@@ -177,3 +177,35 @@ div.icon img
 .fbrowser .upload-files-panel .x4-panel-body {
     border-top-width: 0 !important;
 }
+
+.fbrowser .iconbtn-label {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: black;
+    font-size: 11px;
+}
+
+/* Font Awesome */
+.fa-refresh {
+    margin-left: .1em;
+}
+
+.labkey-fa-plus-circle-folder {
+    color: green;
+    margin-left: 0.25em;
+}
+
+.labkey-fa-upload-files {
+    color: blue;
+    margin-left: 0.05em;
+    margin-top: 0.20em;
+}
+
+.labkey-fa-upload-files-text {
+    margin-left: 0.25em;
+    margin-top: 0.35em;
+}
+
+.labkey-fa-stacked-wrapper {
+    font-size: 9px;
+}
