--- a/query/webapp/dataview/DataViewsPanel.css
+++ b/query/webapp/dataview/DataViewsPanel.css
@@ -178,7 +178,8 @@ div.icon img
     border-top-width: 0 !important;
 }
 
-.fbrowser .iconbtn-label {
+.fbrowser .iconbtn-label,
+.schemabrowser .iconbtn-label {
     text-transform: uppercase;
     font-weight: bold;
     color: black;
@@ -192,19 +193,20 @@ div.icon img
 
 .labkey-fa-plus-circle-folder {
     color: green;
-    margin-left: 0.25em;
+    margin-left: -0.3em;
+    margin-top: 0.1em;
+}
+
+.labkey-fa-plus-circle-file {
+    color: green;
+    margin-left: -0.2em;
+    margin-top: 0.3em;
 }
 
 .labkey-fa-upload-files {
     color: blue;
-    margin-left: 0.05em;
-    margin-top: 0.20em;
-}
-
-.labkey-fa-icon-text {
-    margin-left: 0.25em;
-    margin-top: 0.35em;
-    text-transform: uppercase;
+    margin-left: -0.2em;
+    margin-top: 0.3em;
 }
 
 .labkey-fa-stacked-wrapper {
