--- a/query/webapp/dataview/DataViewsPanel.css
+++ b/query/webapp/dataview/DataViewsPanel.css
@@ -191,20 +191,20 @@ div.icon img
     margin-left: .1em;
 }
 
-.labkey-fa-plus-circle-folder {
-    color: green;
+.labkey-fa-plus-folder {
+    color: white;
     margin-left: -0.3em;
     margin-top: 0.1em;
 }
 
-.labkey-fa-plus-circle-file {
-    color: green;
+.labkey-fa-plus-file {
+    color: white;
     margin-left: -0.2em;
     margin-top: 0.3em;
 }
 
 .labkey-fa-upload-files {
-    color: blue;
+    color: white;
     margin-left: -0.2em;
     margin-top: 0.3em;
 }
