--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3665,3 +3665,59 @@ a.x4-menu-item-link {
     stroke-width: .5px;
 }
 
+/* Font Awesome */
+
+.fbrowser .iconbtn-label,
+.schemabrowser .iconbtn-label {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: black;
+    font-size: 11px;
+}
+
+.x4-menu-body .iconbtn-label{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: black;
+    font-size: 11px;
+    margin-left: 1em;
+}
+
+.labkey-fa-plus-folder {
+    color: white;
+    margin-left: -0.3em;
+    margin-top: 0.1em;
+}
+
+.labkey-fa-plus-file {
+    color: white;
+    margin-left: -0.2em;
+    margin-top: 0.3em;
+}
+
+.labkey-fa-upload-files {
+    color: white;
+    margin-left: -0.2em;
+    margin-top: 0.3em;
+}
+
+.labkey-fa-stacked-wrapper {
+    font-size: 8px;
+}
+
+.folder-menu-buttons .labkey-fa-stacked-wrapper {
+    height: 2.4em;
+}
+
+.x4-menu-body .labkey-fa-stacked-wrapper {
+    font-size: 8px;
+    margin-left: -0.5em;
+}
+
+div span.labkey-main-menu-icon {
+    width: 26px;
+    height: 20px;
+    font-size: 16px;
+    background-color: white;
+}
+
