Issue 24098: fix login to set focus to email field if email field is blank otherwise focus on password

--- a/core/resources/views/login.html
+++ b/core/resources/views/login.html
@@ -23,7 +23,7 @@
             <label for="password">
                 Password <a href="login-resetPassword.view?">(forgot password)</a>
             </label>
-            <input id="password" name="password" type="password" class="input-block" tabindex="2" autofocus>
+            <input id="password" name="password" type="password" class="input-block" tabindex="2">
             <input type=checkbox name="remember" id="remember"  checked>
             <label for="remember">Remember my email address</label>
         <div class="termsOfUseSection" hidden>
