--- a/core/resources/views/_footer.html
+++ b/core/resources/views/_footer.html
@@ -1,3 +1,3 @@
-<div style="text-align: center; color: #676767; font-size:10pt; padding:6px;">
+<div style="text-align: center; padding:6px;">
     <a href="http://labkey.com">Powered by LabKey Software</a>
 </div>
