Spec 23363: make argos login page query and dispay sso icons and make handle return url

--- a/core/resources/views/testCustomLogin.html
+++ b/core/resources/views/testCustomLogin.html
@@ -37,7 +37,7 @@
         <input type=hidden name='X-LABKEY-CSRF'>
     </div>
 </form>
-<div class="otherLoginMechanismsSection">
+<div class="otherLoginMechanismsSection" hidden>
     <br><h3>Or</h3>
     <div class="auth-header">Sign In using:</div>
     <br>
