Issue 24165: on Participants Group dropdown make participant groups and categories show user icon when they are marked as shared. Add cog icon to config groups option. Fix checkbox overlay of style icon.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3742,3 +3742,8 @@ div span.labkey-main-menu-icon {
 {
     border-color: transparent;
 }
+
+a div.x4-menu-item-icon.fa-users
+{
+    background-image: none;
+}
