25433: DiscussionService panel doesn't hide properly x-hidden -> labkey-hidden WebPartView.setCloseURL()

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3926,3 +3926,9 @@ a div.x4-menu-item-icon.fa-users
     border-color: #ddd transparent #ddd #ddd;
     *border-right-color: #ffffff;
 }
+
+.labkey-hidden
+{
+    display: none;
+}
+
